# auto-video-editor

./: .envrc  .gitignore  BITRATE_FIX.md  CPU_ENCODING_GUIDE.md  CRISPERWHISPER_GUIDE.md  GPU_ENCODING_GUIDE.md  LOGGING_GUIDE.md  QUALITY_GUIDE.md  README.md  UV_USAGE.md  background_remover.py  create_test_video.py  dummy_transcript.txt  main.py  person_segmenter.py  plan.md  processor.py  projects.db  pyproject.toml
.Jules/: bolt.md  palette.md
.jules/: bolt.md  sentinel.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epic-5-retrospective.md  epics.md  implementation-readiness-report-2026-01-06.md  prd.md  project-context.md  sprint-status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
core/: audio_extract.py  cleanup.py  db.py  media_info.py  redis_client.py  sse_relay.py  vram_guard.py  vram_info.py
docs/: api-contracts.md  architecture-core.md  architecture-web_portal.md  data-models.md  development-guide.md  index.md  integration-architecture.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  ui-component-inventory.md
scripts/: setup_ramdisk.sh
tests/: test_api.py  test_audio_extract.py  test_base_worker.py  test_cleanup.py  test_db.py  test_filler_detection.py  test_media_info.py  test_preview_assembly.py  test_quality_preset.py  test_redis_client.py  test_sandbox_extract.py  test_silence_detection.py  test_speed_preset.py  test_sse_relay.py  test_vram_guard.py  test_vram_monitor.py
web_app/: .gitignore  README.md  api.py  app.py  run.py  state.py  swagger.py  temp_audio_transcript.txt
workers/: base.py  vram_monitor.py
(+30 files in other folders)
