[project]
name = "auto-video-editor"
version = "0.1.0"
description = "Auto Video Editor: Removes silence and filler words from videos"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ben Piper"}
]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "moviepy<2.0",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "torch>=2.9.1",
]
